<?xml version="1.0"?>
<package format="2">
  <name>realsense_catkin</name>
  <version>0.0.1</version>
  <description>realsense2 SDK catkin wrapper</description>
  <maintainer email="mail@borislap.ru">Boris Lapin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>opencv3_catkin</buildtool_depend>

</package>